clang/test/BSC/Negative/Ownership/Owned/owned_union_err/owned_union_err.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

union D {
    _Owned int a;  // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{type of union field cannot qualified by '_Owned'}}
};


typedef union E {
    int a;
}EE;

int main() {
    _Owned union E e = {.a = 10};  // expected-error {{'union E' cannot be qualified by '_Owned'}}
    _Owned EE ee = {.a = 10}; // expected-error {{'EE' (aka 'union E') cannot be qualified by '_Owned'}}
}

union A {
    _Owned int* a; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
};

typedef _Owned int ownedInt; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
union B {
    ownedInt a; //expected-error {{type of union field cannot qualified by '_Owned', 'ownedInt' (aka '_Owned int') contains '_Owned' type}}
};

struct S {
    _Owned int num; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
};

union C {
    struct S* s1;
};
